--- a/style.css
+++ b/style.css
@@ -536,6 +536,10 @@ body {
 
   .catchcopy {
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
   }
 
   .news {
@@ -561,7 +565,8 @@ body {
 
   .service-content_inner {
     width: 90%;
-
+    position: static;
+    margin: 0 auto;
   }
 
 
